--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ cfgv==3.4.0
 dill==0.3.8
 distlib==0.3.8
 filelock==3.13.1
+flake8==7.0.0
 identify==2.5.34
 isort==5.13.2
 mccabe==0.7.0
 nodeenv==1.8.0
 platformdirs==4.2.0
 pre-commit==3.6.1
+pycodestyle==2.11.1
+pyflakes==3.2.0
 pylint==3.0.3
 PyYAML==6.0.1
 tomlkit==0.12.3
