--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
 astroid==3.0.3
 black==24.2.0
+blinker==1.7.0
 cfgv==3.4.0
 click==8.1.7
 dill==0.3.8
 distlib==0.3.8
 filelock==3.13.1
 flake8==7.0.0
+Flask==3.0.2
 identify==2.5.34
 isort==5.13.2
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 mccabe==0.7.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 packaging==23.2
 pathspec==0.12.1
+pillow==10.2.0
 platformdirs==4.2.0
 pre-commit==3.6.1
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
+python-barcode==0.15.1
 PyYAML==6.0.1
 tomlkit==0.12.3
 virtualenv==20.25.0
+Werkzeug==3.0.1
