--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,7 @@ repos:
         entry: pylint
         language: system
         types: [python]
-        args:
-          [
+        args: [
             "-rn", # Only display messages
             "-sn", # Don't display the score
             "--rcfile=.pylintrc", # Link to your config file
@@ -33,3 +32,13 @@ repos:
         language: system
         pass_filenames: false
         stages: [commit]
+  # - repo: local
+  #   hooks:
+  #     - id: pytest
+  #       name: pytest
+  #       language: system
+  #       entry: pytest -s -v
+  #       always_run: true
+  #       pass_filenames: false
+  #       stages:
+  #         - commit
