--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ filelock==3.13.1
 flake8==7.0.0
 Flask==3.0.2
 identify==2.5.34
+iniconfig==2.0.0
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -21,10 +22,12 @@ packaging==23.2
 pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.2.0
+pluggy==1.4.0
 pre-commit==3.6.1
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
+pytest==8.0.0
 python-barcode==0.15.1
 PyYAML==6.0.1
 tomlkit==0.12.3
